[tool.poetry]
name = "NiaAML"
version = "1.1.1rc1"
description = "Python automated machine learning framework."
license = "MIT"
authors = ["Luka Pečnik <lukapecnik96@gmail.com>", "Iztok Fister Jr. <iztok.fister1@um.si>"]
keywords = ['classification', 'NiaPy', 'scikit-learn', 'nature-inspired algorithms', 'feature selection', 'preprocessing']
homepage = "https://github.com/lukapecnik/NiaAML"
repository = "https://github.com/lukapecnik/NiaAML"
readme = "README.rst"
include = [
    "LICENSE",
    "CHANGELOG.md"
]

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "^1.19.1"
scikit-learn = "^0.23.2"
NiaPy = "^2.0.0rc11"
pandas = "^1.1.4"

[tool.poetry.dev-dependencies]
sphinx = "^3.3.1"
sphinx-rtd-theme = "^0.5.0"
coveralls = "^2.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
