[tool.poetry]
name = "NiaAML"
version = "1.1.7"
description = "Python automated machine learning framework."
license = "MIT"
authors = ["Luka Pečnik <lukapecnik96@gmail.com>", "Iztok Fister Jr. <iztok.fister1@um.si>"]
keywords = ['classification', 'NiaPy', 'scikit-learn', 'nature-inspired algorithms', 'feature selection', 'preprocessing']
homepage = "https://github.com/lukapecnik/NiaAML"
repository = "https://github.com/lukapecnik/NiaAML"
readme = "README.rst"
include = [
    { path="LICENSE", format="sdist" },
    { path="CHANGELOG.md", format="sdist" },
    { path="CITATION.md", format="sdist" }
]

[tool.poetry.dependencies]
python = "^3.6.2"
numpy = "^1.19.1"
scikit-learn = "^0.23.2"
niapy = "^2.0.0"
pandas = "^1.1.4"

[tool.poetry.dev-dependencies]
sphinx = "^3.3.1"
sphinx-rtd-theme = "^0.5.0"
coveralls = "^2.2.0"
autoflake = "^1.4"
black = "^21.5b1"
pre-commit = "^2.12.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
