[tool.poetry]
name = "NiaAML"
version = "2.1.2"
description = "Python automated machine learning framework"
license = "MIT"
authors = ["Luka Pečnik <lukapecnik96@gmail.com>", "Iztok Fister Jr. <iztok@iztok-jr-fister.eu>", "Laurenz Farthofer <laurenz@hey.com>"]
keywords = ['classification', 'NiaPy', 'scikit-learn', 'nature-inspired algorithms', 'feature selection', 'preprocessing']
homepage = "https://github.com/firefly-cpp/NiaAML"
repository = "https://github.com/firefly-cpp/NiaAML"
documentation= "https://niaaml.readthedocs.io/en/latest/"
readme = "README.md"
include = [
    { path="LICENSE", format="sdist" },
    { path="CHANGELOG.md", format="sdist" },
    { path="CITATION.md", format="sdist" },
    { path="COMPONENTS.md", format="sdist" }
]

[tool.poetry.scripts]
niaaml = "niaaml.cli:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
numpy = "^1.19.1"
scikit-learn = "^1.6.1"
niapy = "^2.5.2"
pandas = "^2.1.1"
typer = "^0.12.3"
loguru = "^0.7.2"

[tool.poetry.dev-dependencies]
sphinx = "^3.3.1"
sphinx-rtd-theme = "^0.5.0"
coveralls = "^2.2.0"
autoflake = "^1.4"
black = "^21.5b1"
pre-commit = "^2.12.1"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
